<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstActivity"
    android:background="@mipmap/bg_start_screen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/start_btn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/btn_start"
                android:background="@mipmap/btn_start_on"
                style="@style/CamButton"
                android:textSize="50sp" />
            <Button
                android:id="@+id/more_btn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                style="@style/CamButton"
                android:text="@string/btn_more"
                android:background="@mipmap/btn_start_on"/>
        </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/bannerID">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>


</RelativeLayout>
