<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rootView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".FourthActivity">

    <ImageView
        android:id="@+id/scanned_img"
        android:layout_width="match_parent"
        android:layout_height="170pt"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/frame_screen_3"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/frame_screen_4"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@android:color/white"
        android:layout_above="@id/scanned_img"
        android:layout_marginBottom="-110dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/your_age"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/result_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/your_age"
            android:layout_gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="10dp">
            <Button
                android:id="@+id/btn_save_gallery"
                android:layout_width="@dimen/btn_max_width"
                android:layout_height="@dimen/btn_max_width"
                android:background="@mipmap/btn_download"/>
            <Button
                android:id="@+id/share_insta"
                android:layout_width="@dimen/btn_max_width"
                android:layout_height="@dimen/btn_max_width"
                android:background="@mipmap/btn_instagram" />
            <Button
                android:id="@+id/share_vk"
                android:layout_width="@dimen/btn_max_width"
                android:layout_height="@dimen/btn_max_width"
                android:background="@mipmap/btn_vk"/>

        </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/bannerID"
            android:layout_gravity="end">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
    <ImageView
        android:id="@+id/medal"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:src="@mipmap/pedal_gold"
        android:adjustViewBounds="true"
        android:layout_above="@id/linear_layout"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />
    <LinearLayout
        android:id="@+id/info_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/linear_layout"
        android:background="@android:color/white"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/result2_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_gender"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@mipmap/btn_your_name"
            android:text="@string/btn_gender"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </LinearLayout>

</RelativeLayout>
